--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# specify the port your spring boot application will run on
+server.port=8081
 
+# data source is a factory for connecting to any physical data source.
+spring.datasource.url=jdbc:postgresql://localhost:5432/clickvote_project_db
+
+# postgres configurations, you postgresql password and username
+#the username and password is the one you set during installation
+spring.datasource.username=postgres
+spring.datasource.password=vebcamera
+# create table if it doesn't exist
+spring.jpa.hibernate.ddl-auto = update
