Change 'Election' and 'ElectionOption' JSON settings and fields. Add 3-layer CRU APIs for thesу models.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.username=postgres
 spring.datasource.password=vebcamera
 # create table if it doesn't exist
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
