Add router functionality for React app in order to connect Spring's project API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.password=vebcamera
 # create table if it doesn't exist
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework.security=DEBUG
