--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:8081",
   "name": "static",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
