El proceso de la Inquisición ha terminado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=vebcamera
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security=DEBUG
+
+jwt.secret.access=x5Xq9PAiHuPFFJ/pG+H45JNQ/yPvNM8jXH3XNhWMp7k=
+jwt.secret.refresh=tFlD6u6wpYbtI0KWpVqLxX3CC4t2+YELUSxWYSdtSxk=
