Fix issue with login form not allowing to redirect to register form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/clickvote_project_db
 # postgres configurations, you postgresql password and username
 #the username and password is the one you set during installation
 spring.datasource.username=postgres
-spring.datasource.password=vebcamera
+spring.datasource.password=vebcamera1
 # create table if it doesn't exist
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
